syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

service AuthService {
    rpc ChangeUserPassword(ChangeUserPasswordRequest) returns (google.protobuf.Empty);
}

message ChangeUserPasswordRequest {
    int64 user_id = 1;
    string old_password = 2;
    string new_password = 3;
}